src/components/contact.css
#contact {
    text-align: center;
    padding: 0rem 1rem 4rem 1rem;
    max-width: 1440px;
    margin: auto;
}

#contact h2 {
    font-size: 2rem;
    font-weight: bold;
}

#contact .subtitle {
    color: #6c6c6c;
    margin-bottom: 2rem;
}

.contact-container {
    display: flex;
    gap: 1rem;
    justify-content: center;
    align-items: flex-start;
    width: 100%;
    max-width: 1440px;
    margin: 2rem auto 0;
    flex-wrap: wrap;
}

.form-card {
    flex: 1; /* ! takes up remaining space */
    min-width: 0; 
    background: white;
    padding: 1rem 1.5rem;
    border-radius: 8px;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.form-card .head-wrap{
    display: flex;
    align-items: center;
    gap: 10px;
}

.form-card .head-wrap img{
    width: 4rem;
}


.form-card input,
.form-card textarea {
    padding: 0.8rem;
    border: 1px solid #ccc;
    border-radius: 6px;
    font-size: 1rem;
}

.form-card textarea {
    height: 145px;
    resize: none;
    border: 1px solid #ccc;
}

.form-card button {
    padding: 0.8rem;
    background: black;
    color: white;
    font-weight: bold;
    border: none;
    border-radius: 6px;
    cursor: pointer;
}

.social-links {
  width: 300px; /* fixed */
  flex-shrink: 0; /* prevent shrinking on small screens */
  display: flex;
  flex-direction: column;
  gap: 1rem;
}


.social-links a{
    text-decoration: none;
    transition: .4s;
}

.social-links a:hover{
    cursor: pointer;
    transform: translateY(-10px) scale(103%);
}


.social-card {
  display: flex;
  align-items: center;
  background: white;
  padding: 1rem;
  border-radius: 8px;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
}

.social-card img {
  width: 40px;
  height: 40px;
  margin-right: 1rem;
}

.social-text h4 {
  margin: 0;
  font-size: 1.1rem;
  color: black;
}

.social-text p {
  margin: 0;
  font-size: 0.85rem;
  color: #666;
}

